# koompi-po-auto-translation

./: Cargo.toml  README.md  package.json
data/csv_cache/non_translate_csv/: README.md
data/csv_cache/translated_csv/: README.md
data/export_po/: README.md
data/import_po/: README.md
src/: convert.rs  main.rs  read_filename.rs  readwrite_translate.rs
