[package]
name = "po2doc"
version = "0.1.0"
authors = ["ismesunny <lorshousunny@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.4"
serde_json = "1.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }
seahorse = "1.1.1"
serde = { version = "1.0.117", features = ["derive"] }
subprocess = "0.2.6"
htmlstream = "0.1.3"