[package]
name = "koompi-po-auto-translation"
version = "0.1.0"
authors = ["Lors Housann(Sunny) <lorshousunny@gmail.com>"]
edition = "2018"

[dependencies]
csv = "1.1.4"
serde_json = "1.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }
seahorse = "1.1.1"
serde = { version = "1.0.117", features = ["derive"] }
subprocess = "0.2.6"
htmlstream = "0.1.3"